--- a/src/SubmissionForm.css
+++ b/src/SubmissionForm.css
@@ -3,6 +3,7 @@ body {
   margin: auto 500px;
   width: 500px;
   /* padding: 2px; */
+  font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 .app {
   background-color: white;
@@ -12,8 +13,14 @@ body {
 .app h1 {
   color: green;
   text-align: center;
+  
 }
 
+.form {
+  margin-left: 2rem;
+  padding: 1rem;
+  height: 50%;
+}
 input {
   margin: 0.5rem;
 }
@@ -23,10 +30,6 @@ input {
   display: flex;
   padding: 0.5rem;
   background-color: green;
-}
-
-.form {
-  margin-left: 5rem;
-  padding: 1rem;
-  height: 50%;
+  color: black;
+  font-family: Arial, Helvetica, sans-serif;
 }
