--- a/src/SubmissionForm.css
+++ b/src/SubmissionForm.css
@@ -23,6 +23,22 @@ body {
 input {
   margin: 0.5rem;
 }
+input[type="text"] {
+  width: 80%;
+  height: 1.5rem;
+}
+input[type="email"] {
+  width: 80%;
+  height: 1.5rem;
+}
+input[type="number"] {
+  width: 80%;
+  height: 1.5rem;
+}
+input[type="url"] {
+  width: 80%;
+  height: 1.5rem;
+}
 .resetBtn button {
   font-family: Arial, Helvetica, sans-serif;
   border: transparent;
